css/styles.css
* { box-sizing:border-box; }
html, body {
  margin: 0px;
  padding: 0px;
  height: 100%;
  font-family: 'Helvetica',sans-serif;
}
body {
  background: url("../img/topography-sharp-light2.png");
}



p {
  margin: 0px;
  line-height: 1.2em;
  margin-block-start: 0.2em;
  margin-block-end: 0.5em;
}
  .page p {
    font-size: 1.05em;
    line-height: 1.25em;
  }

h1, h2 {
    color: #4f115f;
    font-family: modesto-condensed, serif;
}
h1 {
  font-size: 2.6em;
}
h2 {
  font-size: 2.2em;
}
h3 {
  color: #4f115f;
}


h1.compact, h2.compact, h3.compact {
  margin-block-start: 0.44em;
  margin-block-end: 0.3em;
}
.subtle {
  color: inherit;
  opacity: 0.7;
  filter: brightness(0.8) saturate(0.8);
}
img.subtle {
  opacity: 1;
  filter: brightness(0.8) saturate(0.8);
}
.subtitle {
  margin-top: -0.5em;
  margin-bottom: 1.5em;
  font-weight: bold;
}
  #reviews .subtitle, #blogs .subtitle {
    margin-top: 0em;
    font-size: 0.9em;
  }

blockquote {
  border-left: 4px solid lightgray;
  margin-inline-start: 1.25em;
  margin-inline-end: 1.25em;
  padding: 0em 1em;
}

section {
    margin-top: 25px;
}

hr {
  border: none;
  border-top: 2px solid lightgray;
  margin-block-start: 0.75em;
  margin-block-end: 0.75em;
}

#reviews h2, #blogs h2 {
    margin-block-start: 0.44em;
    margin-block-end: 0em;
    column-span: all;
}
#reviews a, #blogs a {
  text-decoration: none;
  color: #743286;
}

#wip {
    position: fixed;
    font-size: 300px;
    z-index: 1000000;
    right: 0;
    left: -100px;
    top: -300px;
    bottom: 0;
    color: rgba(0,0,0,0.015);
    transform: rotate(30deg);
}
#wip p {
    margin: 0.5em;
    white-space: nowrap;
}

.preload * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
}

#wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  overflow:hidden;
}
.width-wrapper {
  margin: 0px auto;
  max-width: 1400px;
  position: relative;
  box-sizing: border-box;
  padding: 0px 65px;
}

/*****     *****/
/***** NAV *****/
/*****     *****/

nav {
  height: 58px;
  box-shadow: 0px -5px 20px 10px rgba(35, 4, 43, 0.4);
  font-size: 25px;
  font-family: modesto-condensed, serif;
  background: white;
}
nav a {
  display: block;
  /*color: #23042b;*/
  color: #4f115f;
  text-decoration: none;
  border-right: 1px solid rgba(35, 4, 43, 0.3);
  margin: 4px 0px;
}
nav > .width-wrapper {
  display: flex;
  flex-direction: row;
}

nav > .width-wrapper > div {
  flex: 1;
  text-align: center;
  line-height: 50px;
  height: 58px;
  border-bottom: 0px solid #743286;
  transition: border 0.1s linear 0.05s;
  margin-left: -1px; /* hack fix for right border putting things off 1px visually */
}
  nav > .width-wrapper > div:hover {
    border-bottom: 4px solid #743286;
  }
  nav > .width-wrapper > div:first-child {
    flex: 3 0;
  }
  nav > .width-wrapper > div:first-child:hover {
    border: initial;
  }


#logo > a {
  display: flex;
  height: 50px;
  font-size: 35px;
  color: #743286;
}
#logo img { padding-right: 10px; }

.site-logo {
  height: 100%;
  max-width: 100px;
}

main {
  flex: 1 0 auto;
  min-height: 100vh;
  min-height: calc(100vh - 120px);
}

/*****           *****/
/***** READ MORE *****/
/*****           *****/

.read-more {
  display: none;
  flex-wrap: wrap;
  flex-direction: row;
  text-align: right;
  height: 2em;
  line-height: 2em;
  margin-top: -2em;
  position: relative;
}
  .read-more div {
    flex: 1 1 350px;
    padding: 0em 1em;
  }
  .read-more div:first-child {
    height: 0px;
  }
  .read-more a {
    display: block;
  }

.show-more .read-more {
  display: flex;
}
.show-more .review-content {
  -webkit-mask-image: linear-gradient(180deg,#000 30px,#000 calc(100% - 5em),transparent calc(100% - 2em));
  mask-image: linear-gradient(180deg,#000 30px,#000 calc(100% - 5em),transparent calc(100% - 2em));
}
.show-more .blog-content {
  -webkit-mask-image: linear-gradient(90deg ,#000 50%,transparent calc(50% + 1px)),
      linear-gradient(180deg,#000 30px,#000 calc(100% - 5em),transparent calc(100% - 2em)
    );
  mask-image: linear-gradient(90deg ,#000 50%,transparent calc(50% + 1px)),
      linear-gradient(180deg,#000 30px,#000 calc(100% - 5em),transparent calc(100% - 2em)
    );
}

  /* .read-more div:last-child:before {
    content: '';
    display: block;
    position: absolute;
    bottom: 0;
    right: 0;
    border-bottom: 75px solid rgb(116, 50, 134);
    border-left: 75px solid transparent;
  }
  .read-more div:last-child:after {
    content: '';
    z-index: -1;
    position: absolute;
    right: 12px;
    bottom: 16px;
    width: 70%;
    max-width: 300px;
    max-height: 100px;
    height: 55%;
    box-shadow: -3px 10px 8px 2px rgba(0, 0, 0, 0.3);
    transform: skew(15deg) rotate(6deg);
  } */


/*****          *****/
/***** FEATURES *****/
/*****          *****/
#features > .width-wrapper {
  padding: 0px 80px;
}
/*****         *****/
/***** REVIEWS *****/
/*****         *****/

#reviews > .width-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
#reviews .review {
  margin: 15px;
  padding: 0px;
  flex: 1 1 350px;
  background: white;
  border: 1px solid rgba(35, 4, 43, 0.3);
  border-left-color: white;
  border-right-color: white;
  box-shadow: 1px 2px 8px -2px rgb(35 4 43 / 30%);
  border-radius: 6px;
}

.review {
  position: relative;
  box-sizing: border-box;
  margin-top: 25px;
}
.review:nth-child(even) {
  background: rgba(128, 128, 128, 0.1);
  padding: 25px 0px;
  border: 2px solid rgba(35, 4, 43, 0.05);
  border-width: 2px 0px;
}

.review-wrapper {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  overflow: hidden;
  padding-bottom: 15px;
  margin-top: -15px;
}

.review-image {
  flex: 1 0 350px;
  position: relative;
  min-height: 200px;
  overflow: hidden;
  font-size: 0px;
  margin-bottom: -15px;
  margin-top: 15px;
  border-radius: 6px;
}
/* ... */

